--- a/css/home.css
+++ b/css/home.css
@@ -1,46 +1,23 @@
-/* Estilos para a página home */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
+    padding: 20px;
 }
 
-header {
-    background-color: #007BFF;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 25px 90px;
+h1 {
+    color: #333;
 }
-
-.header-left p {
-    margin: 0;
-}
-
-.header-center h1 {
-    margin: 0;
-}
-
-
 
 #logout-button {
-    background-color: #fff;
-    color: #007BFF;
-    border: none;
+    margin-bottom: 20px;
     padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
     cursor: pointer;
-    border-radius: 4px;
 }
 
 #logout-button:hover {
-    background-color: #ddd;
-}
-
-.filter-buttons, .search-container {
-    text-align: center;
-    margin: 20px 0;
+    background-color: #0056b3;
 }
 
 .filter-button {
@@ -50,7 +27,6 @@ header {
     color: white;
     border: none;
     cursor: pointer;
-    border-radius: 4px;
 }
 
 .filter-button:hover {
@@ -58,34 +34,24 @@ header {
 }
 
 #search-input {
+    margin-bottom: 20px;
     padding: 10px;
     width: 100%;
     max-width: 300px;
     box-sizing: border-box;
-    border: 1px solid #ddd;
-    border-radius: 4px;
 }
 
-.athletes-container {
+#athletes-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 20px;
-    padding: 20px;
 }
 
 .athlete {
-    flex: 1 1 calc(16.66% - 40px); /* 16.66% para 6 por linha, menos a margem */
     border: 1px solid #ddd;
     padding: 10px;
     text-align: center;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 150px;
-    display: flex;
-    flex-direction: column; /* Alinha os elementos verticalmente */
-    height: auto;
+    width: 150px;
 }
 
 .athlete img {
@@ -93,20 +59,4 @@ header {
     height: auto;
     display: block;
     margin-bottom: 10px;
-    border-radius: 4px;
-}
-
-.details-link {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 5px 10px;
-    background-color: #007BFF;
-    color: white;
-    border-radius: 4px;
-    text-decoration: none;
-    margin-top: auto;
-}
-
-.details-link:hover {
-    background-color: #0056b3;
 }
