--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ body {
 
 h1 {
     margin-bottom: 10px;
-    color: #007BFF; /* Cor azul para o título */
+    color: #393E46; 
 }
 
 .subtitle {
@@ -52,7 +52,7 @@ input[type="password"] {
 button[type="submit"] {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #007BFF;
+    background-color: #393E46;
     color: white;
     border: none;
     border-radius: 4px;
