--- a/css/detalhes.css
+++ b/css/detalhes.css
@@ -1,18 +1,20 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     background-color: #606470;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;  
+    justify-content: center;
     min-height: 100vh;
+    color: #393E46;
 }
 
 h1 {
     text-align: center;
     margin-top: 20px;
+    font-family: 'Oswald', sans-serif;
 }
 
 #athlete-details {
@@ -20,6 +22,7 @@ h1 {
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 100%;
 }
 
 .athlete-detail {
@@ -27,18 +30,18 @@ h1 {
     background-color: #F6F4F4;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    text-align: left; 
-    border-radius: 20px;  
-    display: grid;  
-    grid-template-columns: auto 1fr;  
+    text-align: left;
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: auto 1fr;
     max-width: 50%;
 }
 
 .athlete-detail .athlete-imagem {
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
-    padding-right: 20px; 
+    padding-right: 20px;
 }
 
 .athlete-detail img {
@@ -49,7 +52,7 @@ h1 {
 
 .athlete-detail .athlete-infos {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
 .athlete-detail .athlete-infos p {
@@ -60,6 +63,25 @@ h1 {
 
 .athlete-detail strong {
     font-weight: bold;
+}
+
+.back-button-container {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#back-to-home-button {
+    background-color: #606470;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+#back-to-home-button:hover {
+    background-color: #060707;
 }
 
 @media (max-width: 768px) {
@@ -95,5 +117,9 @@ h1 {
     .athlete-detail .athlete-infos p {
         margin: 5px 0;
         font-size: 14px;
+    }
+
+    .back-button-container {
+        margin-top: 20px;
     }
 }
